Creacion de clases para insertar en el proyecto la subida de imagenes por captura Vamos a usar el estandar S3 pero de Tebi